Archive2/18/78a2d9d2c7af31/output
main.cpp:10:7: error: use 'template' keyword to treat 'foo' as a dependent template name
    s.foo<T>(); // error: < parsed as less than operator
      ^
      template 
1 error generated.
